--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
         .total-row { font-size: 22px; font-weight: 400; margin-top: 15px; }
 
         /* INGREDIENTES (image_efd0ec.jpg) */
-        .ing-circle { width: 100%; max-width: 250px; border-radius: 50%; box-shadow: 0 5px 15px rgba(0,0,0,0.1); }
+        .ing-circle { 
+            width: 100%; 
+            max-width: 250px; 
+            border-radius: 50%; 
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1); 
+            display: block; 
+            margin: 0 auto; 
+            aspect-ratio: 1 / 1; 
+            object-fit: cover; 
+        }
         .ing-label { background: #272727; color: #fff; padding: 8px 20px; border-radius: 5px; font-weight: 700; display: inline-block; margin-top: -20px; position: relative; z-index: 2; width: 80%; }
 
         /* FAQ (image_d2a2e4.png) */
@@ -67,6 +76,8 @@
         @media (max-width: 768px) {
             .display-4 { font-size: 32px !important; line-height: 1.2; }
             .lead { font-size: 16px; }
+            .ing-circle { max-width: 70vw; }
+            .ing-label { width: 100%; }
         }
     </style>
 
